crates/rumps-query/snapshots/scripts__471_pragma_union_member_try_into_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "variant Token = Token\nunion Readable = String | Token\n\nfun main() {\n  let x: Readable = \"1\"\n  write (x read Int)!\n}\n"
---
ERROR: cannot `read` `Token` as `Int`
