crates/rumps-query/snapshots/scripts__472_pragma_write_newtype_display_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "newtype Label = String\n\nfun main() {\n  let x: Label = \"a\"\n  write x\n}\n"
---
ERROR: type `Label` does not satisfy `Display` class
