crates/rumps-query/snapshots/scripts__473_pragma_write_newtype_display.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "#(deriving: Display)\nnewtype Label = String\n\nfun main() {\n  let x: Label = \"a\"\n  write x\n}\n"
---
"a"
